[package]
name = "jizzle"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
clap = { version = "4.5.36", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
nom = "8.0.0"
nom_locate = "5.0.0"
thiserror = "2.0.12"
